<resources>
    <string name="app_name">Rocket Mandi</string>
    <string name="subtitle_text_hindi">सब से तेज सब से अच्छी</string>
    <string name="toolbar_home_text_english">Home</string>
    <string name="toolbar_shopping_cart_text_english">Shopping Cart</string>
    <string name="toolbar_profile_text_english">Account</string>
    <string name="title_activity_log_in">LogInActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_my_orders">MyOrders</string>
    <string name="username_phone_field_hint">Enter 10 Digit Mobile Number</string>
    <string name="password_field_hint">Enter Password</string>
    <string name="log_in_text_for_log_in_button">Log In</string>
    <string name="or_text_at_log_in">OR</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="forgot_password_text_view">Forgot Password ?</string>
    <string name="enter_your_name_hint">Enter Your Name</string>
    <string name="next_button_text">NEXT</string>
    <string name="back_to_log_in_text">Back To Log In</string>
    <string name="otp_text_hint">Enter 4 Digit OTP</string>
    <string name="submit_OTP_button_text">SUBMIT OTP</string>
    <string name="send_OTP_again">Send OTP Again</string>
    <string name="back_to_name_and_number">Back</string>
    <string name="create_password_text">Create Password</string>
    <string name="repeat_password_text">Repeat Password</string>
    <string name="create_account_button_text">Create Account Now</string>
    <string name="title_line_one_at_name_and_number_page">Welcome to ROCKET MANDI</string>
    <string name="title_line_two_at_name_and_number_page">We deliver direct from FARM to your PLATE</string>
    <string name="title_line_one_at_submit_OTP">Order and pick up FRESH HARVEST next morning</string>
    <string name="title_line_two_at_submit_OTP">from your favourite nearest store</string>
    <string name="title_line_one_at_create_password">No turning back, just one step away</string>
    <string name="title_line_two_at_create_password">from getting fresh Fruits and Vegetables</string>

    <string name="edit_text_in_my_account">Name and Number</string>
    <string name="pick_up_point_text_in_my_account">PickUpPoint</string>
    <string name="my_orders_text_in_my_account">My Orders</string>
    <string name="log_out_text_in_my_account">Log Out</string>
    <string name="enter_email_hint_text">Enter Email</string>
    <string name="email_and_password_heading_at_top">Email and Password</string>
    <string name="change_password_text_in_my_account">Change Password</string>

    <string name="whats_app_helpline_text">WhatsApp- 8447788214</string>

    <string name="enter_new_name_in_change_customer_name">Enter new name</string>
    <string name="save_new_name_button_text_at_change_customer_name">SAVE</string>
    <string name="cancel_button_text_at_change_customer_name">CANCEL</string>

    <string name="enter_new_number_text">Enter new number</string>
    <string name="enter_new_email_text">Enter new email</string>
    <string name="enter_present_password_text">Enter present password</string>

    <string name="enter_new_password_text">Enter new password</string>

    <string name="forgot_password_text">We will send new password to your email</string>
    <string name="submit_button_text">SUBMIT</string>

    <string name="order_number_text">Order No:</string>
    <string name="date_text">Date of Order:</string>
    <string name="total_text">Total Bill:</string>
    <string name="delivery_status_text">Delivery: </string>
    <string name="payment_status">Payment Status:</string>
</resources>
