<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >


    <EditText
        android:id="@+id/enter_email_edit_text_at_forgot_password"
        android:hint="@string/enter_email_hint_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLength="35">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/forgot_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_text"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/submit_button_at_forgot_password"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit_button_text"
            android:maxLength="35"
            />

        <Button
            android:id="@+id/cancel_button_at_forgot_password"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button_text_at_change_customer_name"
            />

    </LinearLayout>
</LinearLayout>