<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >


    <EditText
        android:id="@+id/enter_new_email_edit_text_at_change_customer_email"
        android:hint="@string/enter_new_email_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLength="35">
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/enter_old_password_edit_text_at_change_customer_email"
        android:hint="@string/enter_present_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLength="20">
        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/save_new_email_button_in_change_customer_email"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_new_name_button_text_at_change_customer_name" />

        <Button
            android:id="@+id/cancel_button_at_change_email_dialogue"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button_text_at_change_customer_name" />

    </LinearLayout>
</LinearLayout>