<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.thefuelcompany.rocketmandi.LogInActivity"
    android:orientation="vertical"
    android:background="@color/colorWhite">
    <RelativeLayout
        android:id="@+id/loadingPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center" >

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true" />
    </RelativeLayout>
<ViewFlipper
    android:id="@+id/logIn_activity_view_flipper"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/LogIn_LogIn_Layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="10">

        <LinearLayout
            android:id="@+id/app_title_at_log_in_liner_layout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:layout_weight="4">
        <TextView
            android:id="@+id/rocket_mandi_title_text_view_in_log_in_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/colorAppThemeSeaGreen"
            android:textSize="@dimen/app_title_text_size_for_log_in" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/log_in_fields_liner_layout_at_log_in"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:layout_weight="3"
            >

        <EditText
            android:id="@+id/logIn_enter_email_for_logIn"
            android:layout_width="@dimen/log_in_fields_width"
            android:layout_height="@dimen/username_and_password_field_height"
            android:hint="@string/enter_email_hint_text"
            android:textSize="@dimen/log_in_fields_text_size"
            android:drawableLeft="@drawable/ic_perm_identity_black_24dp"
            android:maxLength="35"
            android:textColor="@color/colorBlack" />
        <EditText
            android:id="@+id/LogIn_Enter_Password_For_LogIn"
            android:layout_width="@dimen/log_in_fields_width"
            android:layout_height="@dimen/username_and_password_field_height"
            android:inputType="textPassword"
            android:hint="@string/password_field_hint"
            android:textSize="@dimen/log_in_fields_text_size"
            android:drawableLeft="@drawable/ic_lock_black_24dp"
            android:maxLength="20"
            android:textColor="@color/colorBlack" />
        <Button
            android:id="@+id/LogIn_LogIn_Button"
            android:layout_width="@dimen/log_in_fields_width"
            android:layout_height="@dimen/username_and_password_field_height"
            android:text="@string/log_in_text_for_log_in_button"
            android:textSize="@dimen/log_in_fields_text_size"
            android:background="@color/colorAppThemeSeaGreen"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sign_up_and_forgot_password_text"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:weightSum="10">

        <TextView
            android:id="@+id/logIn_signUp_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_text"
            android:textSize="@dimen/log_in_fields_text_size"
            android:gravity= "center_horizontal|center_vertical"
            android:textColor="@color/colorBlack"
            android:layout_weight="7" />


           <TextView
               android:id="@+id/forgot_password_text_view"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/forgot_password_text_view"
               android:textSize="@dimen/log_in_fields_text_size"
               android:gravity= "center_horizontal|center_vertical"
               android:layout_weight="3"/>

           </LinearLayout>

       </LinearLayout>

   <LinearLayout
       android:id="@+id/logIn_activity_name_And_phone_sign_up_layout"
       android:orientation="vertical"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:weightSum="10">

       <LinearLayout
           android:id="@+id/title_line_layout_at_name_and_number"
           android:orientation="vertical"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_weight="4"
           android:background="@color/colorWhite"
           android:gravity="center_horizontal"
           android:weightSum="10">


           <TextView
               android:id="@+id/title_line_one_text_view_at_name_and_number"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="@color/colorWhite"
               android:textColor="@color/colorAppThemeSeaGreen"
               android:text="@string/title_line_one_at_name_and_number_page"
               android:textSize="@dimen/title_line_text_size_at_sign_up"
               android:gravity="center_horizontal|center_vertical"
               android:layout_weight="5"
               android:textStyle="bold"/>

           <TextView
               android:id="@+id/title_line_two_text_view_at_name_and_number"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="@color/colorWhite"
               android:textColor="@color/colorBlack"
               android:text="@string/title_line_two_at_name_and_number_page"
               android:textSize="@dimen/title_line_text_size_at_sign_up"
               android:gravity="center_horizontal"
               android:layout_weight="3"/>

       </LinearLayout>

       <LinearLayout
           android:id="@+id/name_and_number_layout_at_sign_up"
           android:orientation="vertical"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:gravity="center_horizontal"
           android:layout_weight="3">

      <EditText
       android:id="@+id/logIn_enter_name_at_sign_up_edit_text"
       android:layout_width="@dimen/log_in_fields_width"
       android:layout_height="@dimen/username_and_password_field_height"
       android:inputType="textPersonName"
       android:hint="@string/enter_your_name_hint"
       android:textSize="@dimen/log_in_fields_text_size"
       android:maxLength="20" />

       <EditText
           android:id="@+id/login_enter_phone_number_at_sign_up_edit_text"
           android:layout_width="@dimen/log_in_fields_width"
           android:layout_height="@dimen/username_and_password_field_height"
           android:hint="@string/username_phone_field_hint"
           android:textSize="@dimen/log_in_fields_text_size"
           android:inputType="phone"
           android:maxLength="10" />

       <Button
           android:id="@+id/login_to_OTP_next_button"
           android:layout_width="@dimen/log_in_fields_width"
           android:layout_height="@dimen/username_and_password_field_height"
           android:text="@string/next_button_text"
           android:background="@color/colorAppThemeSeaGreen"
           android:textColor="@color/colorWhite"
           android:textSize="@dimen/log_in_fields_text_size" />
       </LinearLayout>

       <TextView
           android:id="@+id/logIn_back_to_login_text_view_at_sign_up"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/back_to_log_in_text"
           android:textColor="@color/colorBlack"
           android:textSize="@dimen/log_in_fields_text_size"
           android:gravity="center_horizontal|center_vertical"
           android:layout_weight="3"/>

   </LinearLayout>

       <LinearLayout
           android:id="@+id/login_activity_OTP_layout"
           android:orientation="vertical"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:weightSum="10">

           <LinearLayout
               android:id="@+id/title_line_layout_at_submit_OTP"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_weight="4"
               android:background="@color/colorWhite"
               android:gravity="center_horizontal"
               android:weightSum="10">


               <TextView
                   android:id="@+id/title_line_one_text_view_at_submit_OTP"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:background="@color/colorWhite"
                   android:textColor="@color/colorBlack"
                   android:text="@string/title_line_one_at_submit_OTP"
                   android:textSize="@dimen/title_line_text_size_at_sign_up"
                   android:gravity="center_horizontal|center_vertical"
                   android:layout_weight="5" />

               <TextView
                   android:id="@+id/title_line_two_text_view_at_submit_OTP"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:background="@color/colorWhite"
                   android:textColor="@color/colorBlack"
                   android:text="@string/title_line_two_at_submit_OTP"
                   android:textSize="@dimen/title_line_text_size_at_sign_up"
                   android:gravity="center_horizontal"
                   android:layout_weight="3"/>

           </LinearLayout>

           <LinearLayout
               android:id="@+id/submit_otp_layout"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:gravity="center_horizontal"
               android:layout_weight="3">

           <EditText
               android:id="@+id/login_OTP_edit_text"
               android:layout_width="@dimen/log_in_fields_width"
               android:layout_height="@dimen/username_and_password_field_height"
               android:hint="@string/otp_text_hint"
               android:inputType="phone"
               android:maxLength="4"
               android:textSize="@dimen/log_in_fields_text_size"
               android:textColor="@color/colorBlack"
               android:gravity="center_horizontal" />

           <Button
               android:id="@+id/login_submit_button"
               android:layout_width="@dimen/log_in_fields_width"
               android:layout_height="@dimen/username_and_password_field_height"
               android:background="@color/colorAppThemeSeaGreen"
               android:textColor="@color/colorWhite"
               android:textSize="@dimen/log_in_fields_text_size"
               android:text="@string/submit_OTP_button_text" />

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_weight="3"/>

           </LinearLayout>

           <LinearLayout
               android:id="@+id/resend_OTP_and_back_text_layout"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_weight="3"
               android:weightSum="10"
               android:gravity="center_horizontal|center_vertical">

           <TextView
               android:id="@+id/logIn_send_again_text_view"
               android:layout_width="match_parent"
               android:layout_height="@dimen/username_and_password_field_height"
               android:textColor="@color/colorBlack"
               android:textSize="@dimen/log_in_fields_text_size"
               android:gravity="center_horizontal|center_vertical"
               android:text="@string/send_OTP_again"
               android:layout_weight="5"/>

           <TextView
               android:id="@+id/login_back_text_view"
               android:layout_width="@dimen/log_in_fields_width"
               android:layout_height="@dimen/username_and_password_field_height"
               android:textSize="@dimen/log_in_fields_text_size"
               android:textColor="@color/colorBlack"
               android:gravity="center_horizontal|center_vertical"
               android:text="@string/back_to_name_and_number"
               android:layout_weight="5"/>
           </LinearLayout>
       </LinearLayout>

       <LinearLayout
           android:id="@+id/login_password_create_layout_text_view"
           android:orientation="vertical"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:weightSum="10">

           <LinearLayout
               android:id="@+id/title_line_layout_at_create_password"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_weight="4"
               android:background="@color/colorWhite"
               android:gravity="center_horizontal"
               android:weightSum="10">


               <TextView
                   android:id="@+id/title_line_one_text_view_at_create_password"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:background="@color/colorWhite"
                   android:textColor="@color/colorBlack"
                   android:text="@string/title_line_one_at_create_password"
                   android:textSize="@dimen/title_line_text_size_at_sign_up"
                   android:gravity="center_horizontal|center_vertical"
                   android:layout_weight="5" />

               <TextView
                   android:id="@+id/title_line_two_text_view_at_create_password"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:background="@color/colorWhite"
                   android:textColor="@color/colorBlack"
                   android:text="@string/title_line_two_at_create_password"
                   android:textSize="@dimen/title_line_text_size_at_sign_up"
                   android:gravity="center_horizontal"
                   android:layout_weight="3"/>

           </LinearLayout>

           <LinearLayout
               android:id="@+id/create_account_fields_layout"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:gravity="center_horizontal"
              android:layout_weight="3">

               <EditText
                   android:id="@+id/login_sign_up_enter_email_edit_text"
                   android:layout_width="@dimen/log_in_fields_width"
                   android:layout_height="@dimen/username_and_password_field_height"
                   android:textSize="@dimen/log_in_fields_text_size"
                   android:textColor="@color/colorBlack"
                   android:hint="@string/enter_email_hint_text"
                   android:maxLength="35"/>

           <EditText
               android:id="@+id/login_signup_create_password_edit_text"
               android:layout_width="@dimen/log_in_fields_width"
               android:layout_height="@dimen/username_and_password_field_height"
               android:textSize="@dimen/log_in_fields_text_size"
               android:textColor="@color/colorBlack"
               android:hint="@string/create_password_text"
               android:inputType="textPassword"/>

           <EditText
               android:id="@+id/login_signup_repeat_password_edit_text"
               android:layout_width="@dimen/log_in_fields_width"
               android:layout_height="@dimen/username_and_password_field_height"
               android:textSize="@dimen/log_in_fields_text_size"
               android:textColor="@color/colorBlack"
               android:hint="@string/repeat_password_text"
               android:inputType="textPassword"/>

           <Button
               android:id="@+id/login_sign_up_create_account_button"
               android:layout_width="@dimen/log_in_fields_width"
               android:layout_height="@dimen/username_and_password_field_height"
               android:text="@string/create_account_button_text"
               android:textColor="@color/colorWhite"
               android:background="@color/colorAppThemeSeaGreen"
               android:textStyle="bold"
               android:textSize="@dimen/log_in_fields_text_size"/>

           </LinearLayout>
       </LinearLayout>
   </ViewFlipper>
       </LinearLayout>

