<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite">


    <LinearLayout
        android:id="@+id/order_number_layout_at_my_orders_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorWhite"
        android:weightSum="10"
        android:gravity="center_horizontal">

    <TextView
        android:id="@+id/order_number_heading_text_view_in_my_order_list"
        android:layout_width="@dimen/my_order_list_view__elements_width"
        android:layout_height="@dimen/my_order_list_view__elements_height"
        android:text="@string/order_number_text"
        android:textColor="@color/colorBlack"
        android:layout_weight="4"
        android:gravity="center_vertical|center_horizontal"
        />

        <TextView
            android:id="@+id/order_number_of_order_text_view_in_my_order_list"
            android:layout_width="@dimen/my_order_list_view__elements_width"
            android:layout_height="@dimen/my_order_list_view__elements_height"
            android:text="A1"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:layout_weight="6"
            android:gravity="center_vertical"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/order_date_layout_at_my_orders_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorWhite"
        android:weightSum="10"
        android:gravity="center_vertical|center_horizontal">

        <TextView
            android:id="@+id/date_heading_text_view_in_my_order_list"
            android:layout_width="@dimen/my_order_list_view__elements_width"
            android:layout_height="@dimen/my_order_list_view__elements_height"
            android:text="@string/date_text"
            android:textColor="@color/colorBlack"
            android:layout_weight="4"
            android:gravity="center_vertical|center_horizontal"/>
    <TextView
        android:id="@+id/date_of_order_text_view_in_my_order_list"
        android:layout_width="@dimen/my_order_list_view__elements_width"
        android:layout_height="@dimen/my_order_list_view__elements_height"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:layout_weight="6"
        android:gravity="center_vertical"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/total_of_order_layout_in_my_order_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorWhite"
        android:weightSum="10"
        android:gravity="center_vertical|center_horizontal">

        <TextView
            android:id="@+id/total_heading_text_view_in_my_order_list"
            android:layout_width="@dimen/my_order_list_view__elements_width"
            android:layout_height="@dimen/my_order_list_view__elements_height"
            android:text="@string/total_text"
            android:textColor="@color/colorBlack"
            android:layout_weight="4"
            android:gravity="center_vertical|center_horizontal"/>


        <TextView
        android:id="@+id/total_of_order_text_view_in_my_order_list"
            android:layout_width="@dimen/my_order_list_view__elements_width"
            android:layout_height="@dimen/my_order_list_view__elements_height"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:layout_weight="6"
            android:gravity="center_vertical"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/delivery_of_order_layout_in_my_order_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorWhite"
        android:weightSum="10"
        android:gravity="center_vertical|center_horizontal">

        <TextView
            android:id="@+id/delivery_heading_text_view_in_my_order_list"
            android:layout_width="@dimen/my_order_list_view__elements_width"
            android:layout_height="@dimen/my_order_list_view__elements_height"
            android:text="@string/delivery_status_text"
            android:textColor="@color/colorBlack"
            android:layout_weight="4"
            android:gravity="center_vertical|center_horizontal"/>
    <TextView
        android:id="@+id/delivery_of_order_text_view_in_my_order_list"
        android:layout_width="@dimen/my_order_list_view__elements_width"
        android:layout_height="@dimen/my_order_list_view__elements_height"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:layout_weight="6"
        android:gravity="center_vertical"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/payment_status_of_order_layout_in_my_order_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorWhite"
        android:weightSum="10"
        android:gravity="center_vertical|center_horizontal">

        <TextView
            android:id="@+id/payment_status_heading_text_view_in_my_order_list"
            android:layout_width="@dimen/my_order_list_view__elements_width"
            android:layout_height="@dimen/my_order_list_view__elements_height"
            android:text="@string/payment_status"
            android:textColor="@color/colorBlack"
            android:layout_weight="4"
            android:gravity="center_vertical|center_horizontal"/>
    <TextView
        android:id="@+id/payment_status_of_order_text_view_in_my_order_list"
        android:layout_width="@dimen/my_order_list_view__elements_width"
        android:layout_height="@dimen/my_order_list_view__elements_height"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:layout_weight="6"
        android:gravity="center_vertical"/>

    </LinearLayout>

</LinearLayout>